feat: add user routes more fulfilled with filter query
